# sumitomo-demo

./: .gitignore  pyproject.toml  requirements.txt
app/demo_a/: chunker.py  converter.py  extractor.py  grouper.py  llm_client.py  merger.py  pipeline.py  presets.py  schema_builder.py  schemas.py  searcher.py  splitter.py
app/ui/: streamlit_app.py
resources/PoC見積依頼_実際の業務資料/受注前/テンダー書類/: 4.1-Exhibit D Comp and Paym_OCTG_All.docx  Instructions to Bidders_OCTG.docx  Project Overview_Mozambique.docx
resources/PoC見積依頼_実際の業務資料/受注前/テンダー書類/Chrome/: Att 1-Exhibit D - OCTG Cr.xlsx
resources/PoC見積依頼_実際の業務資料/受注前/テンダー書類/Large OD/: Att 1-Exhibit D - OCTG Large OD.xlsx
